--- a/templates/base.html
+++ b/templates/base.html
@@ -86,6 +86,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
+
     <script>
         AOS.init();
     </script>
