--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="mainNav">
                     <ul class="navbar-nav ms-5">
                         <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Programs</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'program_list' %}">Programs</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Instructors</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
