--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
     {% block extra_css %}{% endblock %}
 </head>
@@ -32,7 +34,7 @@
                     <ul class="navbar-nav ms-5">
                         <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'program_list' %}">Programs</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Instructors</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'instructors_list' %}">Instructors</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
                     </ul>
