--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,7 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'program_list' %}">Programs</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'instructors_list' %}">Instructors</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'pricing' %}">Pricing</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
                     </ul>
                     <ul class="navbar-nav ms-5">
