--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,46 +1,39 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% load account socialaccount %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block head_title %}{% trans "Sign In to FitConnect" %}{% endblock %}
 
 {% block content %}
+<div class="auth-container">
+  <h1 class="auth-title">{% trans "Welcome Back to FitConnect" %}</h1>
+  <p class="auth-subtitle">Log in to book programs, manage bookings, and connect with instructors.</p>
 
-<h1>{% trans "Sign In" %}</h1>
-
-{% get_providers as socialaccount_providers %}
-
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-<div class="socialaccount_ballot">
-
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
-
-  <div class="login-or">{% trans 'or' %}</div>
-
-</div>
-
-{% include "socialaccount/snippets/login_extra.html" %}
-
-{% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-{% endif %}
-
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+  {% get_providers as socialaccount_providers %}
+  {% if socialaccount_providers %}
+    <div class="socialaccount_ballot">
+      <ul class="socialaccount_providers">
+        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+      </ul>
+      <div class="login-or">{% trans "or" %}</div>
+    </div>
+    {% include "socialaccount/snippets/login_extra.html" %}
   {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-</form>
 
+  <form method="POST" action="{% url 'account_login' %}" class="auth-form">
+    {% csrf_token %}
+    {{ form.as_p }}
+    {% if redirect_field_value %}
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+
+    <div class="auth-actions">
+      <a href="{% url 'account_reset_password' %}" class="auth-link">{% trans "Forgot Password?" %}</a>
+      <button type="submit" class="auth-button">{% trans "Sign In" %}</button>
+    </div>
+  </form>
+
+  <p class="auth-footer">Don't have an account? <a href="{{ signup_url }}">Sign up here</a>.</p>
+</div>
 {% endblock %}
