--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -100,7 +100,7 @@
   <div class="container">
     <h2 class="mb-3">Start Your Fitness Journey Today</h2>
     <p class="mb-4">Join thousands of members who trust FitConnect to stay active and healthy.</p>
-    <a href="#" class="btn btn-primary btn-lg">Join Now</a>
+    <a href="{% url 'pricing' %}" class="btn btn-primary btn-lg">Join Now</a>
   </div>
 </section>
 {% endblock %}
